Downgrade to Java 8
As most published binaries want maximum compatibility, and Java 8 is the
lowest we can go for using JUnit 5.