@@ -2,19 +2,32 @@ package com.github.fridujo.markdown.junit.engine.visitor;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
-public record ContainerNode(String name, Collection<TestNode> children) implements TestNode {
+public class ContainerNode implements TestNode {
+
+    private final String name;
+    private final Collection<TestNode> children;
 
     public ContainerNode(String name, Collection<TestNode> children) {
         this.name = name;
-        this.children = List.copyOf(children);
+        this.children = Collections.unmodifiableList(new ArrayList<>(children));
+    }
+
+    @Override
+    public String name() {
+        return name;
     }
 
     @Override
     public TestNode.Type type() {
         return TestNode.Type.CONTAINER;
+    }
+
+    public Collection<TestNode> children() {
+        return children;
     }
 
     public static class Builder implements TestNode.Builder {
@@ -34,7 +47,7 @@ public record ContainerNode(String name, Collection<TestNode> children) implemen
         public ContainerNode build() {
             List<TestNode> builtChildren = children.stream()
                 .map(TestNode.Builder::build)
-                .filter(tn -> !(tn.type() == Type.CONTAINER && ContainerNode.class.cast(tn).children.isEmpty()))
+                .filter(tn -> !(tn.type() == Type.CONTAINER && ((ContainerNode) tn).children.isEmpty()))
                 .collect(Collectors.toList());
             return new ContainerNode(name, builtChildren);
         }
