@@ -9,7 +9,10 @@ import org.commonmark.node.Text;
 import org.opentest4j.AssertionFailedError;
 
 import javax.tools.*;
+import java.io.IOException;
+import java.io.UncheckedIOException;
 import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.*;
@@ -65,7 +68,7 @@ public class CodeBlockCompilerVisitor extends AbstractVisitor implements Markdow
     }
 
     private void addNewContainer(int level, String headingText) {
-        var newContainer = new ContainerNode.Builder(headingText);
+        ContainerNode.Builder newContainer = new ContainerNode.Builder(headingText);
         PathElement parentNode = nodePath.peekFirst();
         if (parentNode == null) {
             testNodes.add(newContainer);
@@ -80,10 +83,30 @@ public class CodeBlockCompilerVisitor extends AbstractVisitor implements Markdow
         return parentNode != null ? parentNode.level : 0;
     }
 
-    private record PathElement(int level, ContainerNode.Builder node) {
+    private static class PathElement {
+        private final int level;
+        private final ContainerNode.Builder node;
+
+        private PathElement(int level, ContainerNode.Builder node) {
+            this.level = level;
+            this.node = node;
+        }
+
+
+        public ContainerNode.Builder node() {
+            return node;
+        }
     }
 
-    private record SourceCompilerRunnable(Path markdownFilePath, String source) implements Runnable {
+    private static class SourceCompilerRunnable implements Runnable {
+
+        private final Path markdownFilePath;
+        private final String source;
+
+        private SourceCompilerRunnable(Path markdownFilePath, String source) {
+            this.markdownFilePath = markdownFilePath;
+            this.source = source;
+        }
 
         @Override
         public void run() {
@@ -92,13 +115,27 @@ public class CodeBlockCompilerVisitor extends AbstractVisitor implements Markdow
 
             JavaFileObject javaFileObject = new SourceMemoryJavaFileObject(markdownFilePath.toString(), source);
 
-            var targetDirectory = Paths.get("").resolve("target");
-            var containingFolder = targetDirectory.resolve("generated-markdown-classes");
-            var options = List.of("-d", containingFolder.toString());
+            Path targetDirectory = Paths.get("").resolve("target");
+            Path containingFolder = targetDirectory.resolve("generated-markdown-classes");
+            createDirectoryIfNeeded(containingFolder);
+            List<String> options = Arrays.asList("-d", containingFolder.toString());
 
             DiagnosticCollector<JavaFileObject> diagnosticListener = new DiagnosticCollector<>();
-            if (!compiler.getTask(null, fileManager, diagnosticListener, options, null, List.of(javaFileObject)).call()) {
+            if (!compiler.getTask(null, fileManager, diagnosticListener, options, null, Collections.singleton(javaFileObject)).call()) {
                 throw new AssertionFailedError("Compilation failed\n\n" + diagnosticListener.getDiagnostics().stream().map(Object::toString).collect(Collectors.joining("\n")));
+            }
+        }
+
+        /**
+         * Target directory is not created by old versions of the Java Compiler.
+         */
+        private void createDirectoryIfNeeded(Path containingFolder) {
+            if (!Files.exists(containingFolder)) {
+                try {
+                    Files.createDirectory(containingFolder);
+                } catch (IOException e) {
+                    throw new UncheckedIOException(e);
+                }
             }
         }
     }
